# radio-oracle

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: persona.toml  settings.py
docs/: SETUP.md  deploy-2026-07-upgrade.md  hnsw-jetson-load-failure.md  rag-migration-runbook.md  rag-v2-runbook.md  wakeword-retrain-runbook.md  wiring-diagram.md
docs/wiring/: netlist.md
docs/workstreams/: 1-electronics.md  1-rag-ingest.md  2-music-player.md  2-rag.md  3-music.md  3-tts-conversation.md  4-books.md  4-electronics.md  5-reliability.md  5-tts.md  6-llm.md  7-orchestration.md  8-diagnostics.md  README.md
firmware/: README.md
models/: librarian.onnx
oracle/: __main__.py  activity.py  app.py  audio.py  chime.py  commands.py  core.py  health.py  llm.py  log.py  persona.py  state.py  stt.py  stt_parakeet.py  stt_worker.py  tts.py  volume_bridge.py  wakeword.py
oracle/books/: __init__.py  bookmarks.py  library.py  reader.py  session.py
oracle/diag/: __init__.py  __main__.py  server.py  tegrastats.py  tts_worker.py
oracle/hardware/: __init__.py  audio_routing.py  button.py  leds.py  pot.py  power_switch.py  switch_adc.py  volume.py
oracle/memory/: context.py  store.py  summarizer.py
oracle/music/: __init__.py  catalog.py  player.py
oracle/rag/: chunker.py  embedder.py  modes.py  reranker.py  retriever.py  router.py
oracle/rag/backends/: __init__.py  chroma.py  faiss_ivfpq.py
oracle/web/: app.py
oracle/web/static/: pipboy.css
oracle/web/templates/: index.html
scripts/: build_faiss.ps1  build_faiss_ivfpq.py  download_knowledge.ps1  download_knowledge.sh  download_models.sh  ensure_aec.sh  eval_rag.py  extract_book_authors.py  extract_gutenberg_zim.py  index_books.py  index_music.py  ingest_generic_zim.py  ingest_gutenberg.py  ingest_wikipedia.py  ingest_zim.py  migrate_to_nvme.sh  reembed.ps1  reembed_collection.py  setup_jetson.sh  verify_chroma.py
systemd/: oracle-gpio-led.dts  oracle-web.service  pulse-default.pa  radio-oracle-diag.service  radio-oracle.service
tests/: test_activity.py  test_books.py  test_button.py  test_catalog.py  test_chunker.py  test_commands.py  test_leds.py  test_llm.py  test_memory.py  test_persona.py  test_player.py  test_rag_backends.py  test_rag_faiss_backend.py  test_rag_modes.py  test_rag_retriever.py  test_rag_router.py  test_settings.py
training/: librarian_model.yaml
