[project]
name = "radio-oracle"
version = "0.1.0"
description = "Fully offline voice assistant in a vintage radio enclosure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Erik Salo" }]
dependencies = [
    "loguru>=0.7",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
voice = [
    "sounddevice>=0.4",
    "scipy>=1.12",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # nomic-embed's remote modeling code imports einops at runtime
    "einops>=0.7",
    # transformers 5.x needs torch>=2.6; the Jetson has CPU torch 2.4.1
    # (root-installed 2026-05-24), which silently broke the embedder.
    "transformers<5",
]
tts = [
    "kokoro-onnx>=0.4",
]
stt = [
    "faster-whisper>=1.0",
]
# NVIDIA Parakeet-TDT via sherpa-onnx (PyPI wheel is CPU; on the Jetson
# install the k2-fsa CUDA/JetPack build instead — see docs).
parakeet = [
    "sherpa-onnx>=1.10",
]
wakeword = [
    "faster-whisper>=1.0",
]
stt-legacy = [
    "pywhispercpp>=1.4",
]
music = [
    "mutagen>=1.47",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ingest = [
    "libzim>=3.4",
    "selectolax>=0.3",
]
diag = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "psutil>=5.9",
    "python-multipart>=0.0.20",
    "smbus2>=0.5",
    "Jetson.GPIO>=2.1.12",
]
all = [
    "radio-oracle[voice,rag,tts,stt,wakeword,music,diag]",
]

[project.scripts]
oracle = "oracle.__main__:main"

[tool.setuptools.packages.find]
include = ["oracle*", "config*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.ps1"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Inline single-page UI (HTML/JS strings) — long lines are the content.
"oracle/diag/server.py" = ["E501"]
# Aligned per-collection config table reads better unwrapped.
"config/settings.py" = ["E501"]
# One-off ingest/build scripts; log/help strings run long.
"scripts/*.py" = ["E501"]
# importorskip("faiss") must run before the faiss-dependent import.
"tests/test_rag_faiss_backend.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
